# JSON-and-Github

./: .~lock.Shell Commands.odt#  CMakeLists.txt  README.md  Shell Commands.odt
src/: parse_config.c  parse_json.cpp  parse_translational.c
